--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"five-server",
     "build": "webpack",
     "deploy": "gh-pages -d dist"
   },
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/divljikunic/divljikunic.github.io#readme",
   "devDependencies": {
+    "five-server": "^0.1.2",
     "html-webpack-plugin": "^5.5.0",
     "three": "^0.136.0",
     "webpack": "^5.65.0",
